--- a/02_Full-Stack-WebDev_Angela/10.3 Mondrian Project/solution.html
+++ b/02_Full-Stack-WebDev_Angela/10.3 Mondrian Project/solution.html
@@ -28,10 +28,11 @@
       height: 748px;
       width: 748px;
       display: grid;
-      background-color: #000;
+      background-color: #000; 
       grid-template-columns: 320px 198px 153px 50px;
       grid-template-rows: 414px 130px 155px 22px;
       gap: 9px;
+      /* the background color: 因为gap无法单独设定颜色，因此设定bg color为黑（==gap） */
     }
 
     .item {
