--- a/02_Full-Stack-WebDev_AG/18.0 DOM Challenge Starting Files/dice.html
+++ b/02_Full-Stack-WebDev_AG/18.0 DOM Challenge Starting Files/dice.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <footer>www 🎲 stella 🎲 com</footer>
 
     <script src="index.js" async charset="utf-8"></script>
 
