--- a/02_Full-Stack-WebDev_AG/18.0_DrumKit_DOMAdvance/index.html
+++ b/02_Full-Stack-WebDev_AG/18.0_DrumKit_DOMAdvance/index.html
@@ -26,7 +26,7 @@
     Click, or Press the Key ❤️ Made in Göteborg.
   </footer>
 
-  <script src="/index.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
